--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -40,10 +40,27 @@
             @media all and (min-width: $small){
                 width: 290px;
             } 
+            
+            &--black {
+                &:hover {
+                    border-color: transparent;
+                }
+            }
+            
+            &--white {
+                &:hover {
+                    .u-play {
+                        transform: translate3d(5px, 0, 0);
+                    }
+                }
+            }
         }
+        
+        
     }
 
     .u-play {
+        @extend %anim;
         margin-right: 20px;
     }    
 }
