--- a/src/sass/components/_inside.scss
+++ b/src/sass/components/_inside.scss
@@ -57,14 +57,23 @@
             @extend %flex-xy;
             display: inline-flex;
             width: 30px; height: 30px;
-            border: 1px solid #808080;
+            border: 1px solid $c-gray9;
             border-radius: 50%;
             font-size: rem(11);
             cursor: pointer;
+            
+            &:before {
+                @extend %anim;
+            }
 
             &:hover {
-//                border-color: darken(#808080, 10%);
-                background-color: white;
+                background-color: $c-black2;
+                border-color: $c-black2;
+                
+                &:before {
+                    color: white;
+                }
+                
             }
             
             &.slick-prev {
