--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -11,9 +11,14 @@
     }
 
     a {
+        @extend %ulink;
         letter-spacing: 1px;
         text-transform: uppercase;
         font-size: rem(12);
+        
+        &:after, &:before {
+            background-color: $c-primary;
+        }
     }
     
     @media screen and ( max-width: $minlarge ) {
