--- a/src/sass/settings/_colors.scss
+++ b/src/sass/settings/_colors.scss
@@ -11,6 +11,9 @@ $c-gray5:   #e8e8e8;
 $c-gray6:   #e9e9e9;
 $c-gray7:   #dfdfdf;
 $c-gray8:   #595959;
+$c-gray9:   #808080;
+$c-gray10:  #e3e3e3;
+$c-gray11:  #d7d7d7;
 
 $c-green1:  #03e8c6;
 $c-green2:  #22e6c5;
