--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,6 +16,7 @@
 @import 'elements/typography';
 
 @import 'objects/btn';
+@import 'objects/gradient';
 @import 'objects/hamburger';
 @import 'objects/header';
 @import 'objects/icons';
@@ -39,8 +40,10 @@
 @import 'components/section-i';
 @import 'components/section-j';
 @import 'components/section-k';
+@import 'components/section-l';
 
 @import 'components/apla';
+@import 'components/benefits';
 @import 'components/details';
 @import 'components/inside';
 @import 'components/instruction';
