--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -15,6 +15,8 @@
     
     .c-social {
         a {
+            border: 1px solid #d8d8d8;
+
             &:hover {
                 background-color: white;
             }
