--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -11,11 +11,13 @@
         @extend %flex-xy;
         width: 45px;
         height: 45px;
-        border: 1px solid #d8d8d8;
+        //border: 1px solid #d8d8d8;
         border-radius: 50%;
         font-size: rem(12);
         color: $c-black2;
         
-        
+        span {
+            padding-bottom: 4px;
+        }
     }
 }
