--- a/src/sass/components/_topbar.scss
+++ b/src/sass/components/_topbar.scss
@@ -42,8 +42,14 @@
         @media screen and ( max-width: $smartphone_portrait + px ) {
             width: auto;
             height: 30px;
-            padding: 0 10px;
             font-size: rem(9);
+            
+            span {
+                padding: {
+                    left: 10px;
+                    right: 10px;
+                }
+            }
         }
         
         
