--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -44,6 +44,7 @@
 
 @import 'components/apla';
 @import 'components/benefits';
+@import 'components/cookies';
 @import 'components/details';
 @import 'components/inside';
 @import 'components/instruction';
