--- a/src/sass/tools/_mixins.scss
+++ b/src/sass/tools/_mixins.scss
@@ -6,6 +6,7 @@
 @mixin font-face-db( $font-name, $font-filename, $font-weight: normal ){
   @font-face {
     font-family: $font-name;
+    font-display: swap;
     src: url('../fonts/' + $font-filename + '.eot');
     src: url('../fonts/' + $font-filename + '.eot?#iefix') format('embedded-opentype'),
          url('../fonts/' + $font-filename + '.woff') format('woff'),
