--- a/src/includes/head.html
+++ b/src/includes/head.html
@@ -1,21 +1,27 @@
-    <title>NTS - Jacek Kłosiński</title>
+    <title>N/T/S - Jacek Kłosiński</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="KeyWords" content="">
     <meta name="Description" content="">
     <meta name="robots" content="all">
     <meta name="Language" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="canonical" href="">
-    <meta property="og:title" content="Wycena pracy w branży kreatywnej – Kurs online">
+
+    <link rel="canonical" href="https://nts.klosinski.net">
+
+    <meta property="og:locale" content="pl_PL">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="https://kursy.klosinski.net/wycena-pracy/content/OG_wycena_pracy_klosinski.jpg">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Notesy, które zamieniają plan w działanie">
+    <meta property="og:description" content="Minimalistyczne notesy N/T/S Daily & Plain">
+    <meta property="og:url" content="https://nts.klosinski.net">
+    <meta property="og:site_name" content="N/T/S - Jacek Kłosiński">
+    <meta property="og:image" content="https://nts.klosinski.net/social.jpg">
     
-    <meta name="twitter:card" value="summary">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:description" content="">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Notesy, które zamieniają plan w działanie">
+    <meta name="twitter:description" content="Minimalistyczne notesy N/T/S Daily & Plain">
+    <meta name="twitter:image" content="https://nts.klosinski.net/social.jpg">
     
-    <meta itemprop="name" content="">
-    <meta itemprop="description" content="">
-    <meta itemprop="image" content="https://kursy.klosinski.net/wycena-pracy/content/OG_wycena_pracy_klosinski.jpg"/>
+    <meta itemprop="name" content="Notesy, które zamieniają plan w działanie">
+    <meta itemprop="description" content="Minimalistyczne notesy N/T/S Daily & Plain">
+    <meta itemprop="image" content="https://nts.klosinski.net/social.jpg">
+
