--- a/src/sass/components/_inside.scss
+++ b/src/sass/components/_inside.scss
@@ -117,7 +117,10 @@
     }
     
     &__photos {
+        @extend %flex;
+        @extend %flex-wrap;
         width: 780px;
+        height: 100%;
         
         @media screen and ( max-width: 1260px) {
             width: grid(780, 1200);
@@ -127,28 +130,27 @@
             width: 100%;
         }
         
-        ul {
-            display: flex !important;
-            @extend %flex-wrap;
-            width: 100%;
-            height: 100%;
-            
-            li {
-                &:first-child {
-                    margin-bottom: 20px;
-                    
-                    @media screen and ( min-width: $tablet_portrait + 1px ) and ( max-width: $large1) {
-                        margin-bottom: grid(20, 1260);
-                    }
-                    
-                    @media screen and ( max-width: $tablet_portrait + px) {
-                        margin-bottom: 10px; 
-                    }
+        li {
+            &:first-child {
+                margin-bottom: 20px;
                 
+                @media screen and ( min-width: $tablet_portrait + 1px ) and ( max-width: $large1) {
+                    margin-bottom: grid(20, 1260);
                 }
-
+                
+                @media screen and ( max-width: $tablet_portrait + px) {
+                    margin-bottom: 10px; 
+                }
+            
             }
+
         }
+        
+        
+        
+
+            
+
     }
     
     &__text {
