--- a/src/sass/objects/_btn.scss
+++ b/src/sass/objects/_btn.scss
@@ -7,11 +7,13 @@
     padding-top: 0;
     padding-bottom: 0;
     border-radius: 50px;
+    border: 1px solid transparent;
     letter-spacing: 1px;
     text-transform: uppercase;
-    font-family: $adelle;
-    font-size: rem(15);
-    border: 1px solid transparent;
+    font: {
+        family: $adelle;
+        size: rem(15);
+    }
 
     &--black {
         background-color: $c-primary;
